--- a/wtf2023/02_gpg13_texts.htm
+++ b/wtf2023/02_gpg13_texts.htm
@@ -3,7 +3,7 @@
     <meta name="robots" content="noindex, nofollow"/>
     <title>Список и голосование — Тексты от G до T</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0" />
-    <script type="text/javascript" href="wtfstyles.js"></script>
+    <script type="text/javascript" href="wtfscript.js"></script>
     <link rel="stylesheet" type="text/css" href="wtfstyles.css">
 </head><body>
     <div id="form">
