--- a/wtf2023/02_gpg13_texts.htm
+++ b/wtf2023/02_gpg13_texts.htm
@@ -1858,30 +1858,6 @@
 <ul>
     <li>
         <input type="checkbox" style="display:none" class="mark" />
-        <a target="_blank" href="https://archiveofourown.org/works/44578672/chapters/112135669">1. Варенье из шишек и прочие особенности снежнянской кухни</a>
-    </li>
-    <li>
-        <input type="checkbox" style="display:none" class="mark" />
-        <a target="_blank" href="https://archiveofourown.org/works/44578672/chapters/112206823">2. Шерстяные носки и изменения Мондштадтского климата</a>
-    </li>
-    <li>
-        <input type="checkbox" style="display:none" class="mark" />
-        <a target="_blank" href="https://archiveofourown.org/works/44578672/chapters/112206844">3. Валенки и тонкости общения с некоторыми алхимиками</a>
-    </li>
-    <li>
-        <input type="checkbox" style="display:none" class="mark" />
-        <a target="_blank" href="https://archiveofourown.org/works/44578672/chapters/112206910">4. Пирожки с печенью и карательная кулинария</a>
-    </li>
-    <li>
-        <input type="checkbox" style="display:none" class="mark" />
-        <a target="_blank" href="https://archiveofourown.org/works/44578672/chapters/112206943">5. Перцовая настойка и пьяные откровения</a>
-    </li>
-    <li>
-        <input type="checkbox" style="display:none" class="mark" />
-        <a target="_blank" href="https://archiveofourown.org/works/44578672/chapters/112206991">6. Баня и традиционные водные процедуры</a>
-    </li>
-    <li>
-        <input type="checkbox" style="display:none" class="mark" />
         <a target="_blank" href="https://archiveofourown.org/works/44579461">Бросил парень - обстриги каре</a>
     </li>
     <li>
@@ -1907,6 +1883,10 @@
     <li>
         <input type="checkbox" style="display:none" class="mark" />
         <a target="_blank" href="https://archiveofourown.org/works/44578846">Из всех существующих в мире слов остается только «прости»</a>
+    </li>
+    <li>
+        <input type="checkbox" style="display:none" class="mark" />
+        <a target="_blank" href="https://archiveofourown.org/works/44578672">Из Снежной с любовью</a>
     </li>
     <li>
         <input type="checkbox" style="display:none" class="mark" />
