--- a/wtf2023/01_visitcard.htm
+++ b/wtf2023/01_visitcard.htm
@@ -447,7 +447,7 @@
         <h2>WTF Kylux and Co 2023</h2>
         <ul>
             <li class="dontvote" title="Не для голосования">
-                    <a target="_blank" href="https://archiveofourown.org/works/43526313">Кайлакс: Начало года | Kylux: The Beginning of the Year[!!CHECK!!]</a>
+                    <a target="_blank" href="https://archiveofourown.org/works/43526313">Кайлакс: Начало года | Kylux: The Beginning of the Year</a>
                 </li>
         </ul>
         <h2>WTF Lya ty krysa 2023</h2>
@@ -552,7 +552,7 @@
         <ul>
             <li>
                     <input type="checkbox" style="display:none" class="mark" />
-                    <a target="_blank" href="https://archiveofourown.org/works/43864797">Визитка[!!CHECK!!]</a>
+                    <a target="_blank" href="https://archiveofourown.org/works/43864797">Визитка</a>
                 </li>
         </ul>
         <h2>WTF Naruto 2023</h2>
