--- a/wtf2023/02_gpg13_visual.htm
+++ b/wtf2023/02_gpg13_visual.htm
@@ -3084,6 +3084,10 @@
     </li>
     <li>
         <input type="checkbox" style="display:none" class="mark" />
+        <a target="_blank" href="https://archiveofourown.org/works/44783659">Прикасаться</a>
+    </li>
+    <li>
+        <input type="checkbox" style="display:none" class="mark" />
         <a target="_blank" href="https://archiveofourown.org/works/44783677">Случайная встреча</a>
     </li>
     <li>
@@ -3572,6 +3576,17 @@
     <li>
         <input type="checkbox" style="display:none" class="mark" />
         <a target="_blank" href="https://archiveofourown.org/works/44728699">[Fanart] №1 partner</a>
+    </li>
+</ul>
+<h2>WTF Polyamory 2023</h2>
+<ul>
+    <li>
+        <input type="checkbox" style="display:none" class="mark" />
+        <a target="_blank" href="https://archiveofourown.org/works/44782873">[art] Воспоминания о прошлом лете</a>
+    </li>
+    <li>
+        <input type="checkbox" style="display:none" class="mark" />
+        <a target="_blank" href="https://archiveofourown.org/works/44782780">[art] Крепкая дружба</a>
     </li>
 </ul>
 <h2>WTF project Desert 2023</h2>
