--- a/wtf2023/02_gpg13_visual.htm
+++ b/wtf2023/02_gpg13_visual.htm
@@ -4108,7 +4108,7 @@
     </li>
     <li>
         <input type="checkbox" style="display:none" class="mark" />
-        <a target="_blank" href="https://archiveofourown.org/works/44787178">[Art] Наследник Белый Кораблей</a>
+        <a target="_blank" href="https://archiveofourown.org/works/44787178">[Art] Наследник Белых Кораблей</a>
     </li>
     <li>
         <input type="checkbox" style="display:none" class="mark" />
