--- a/wtf2023/00_out.htm
+++ b/wtf2023/00_out.htm
@@ -179,6 +179,12 @@
 </head><body>
     <div id="anchors"></div>
     <div id="list">
+        <h2>WTF Душеспасение 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44955805">О нюансах репрезентации: образ еврейской культуры в трилогии "Наука побеждать"</a>
+    </li>
+</ul>
         <h2>WTF Новогодняя сборная имени Оливье 2023</h2>
 <ul>
     <li class="out" title="Внеконкурсная работа">
@@ -491,6 +497,12 @@
         <a target="_blank" href="https://archiveofourown.org/works/44444257">Визитка команды WTF Captain Blood 2023</a>
     </li>
 </ul>
+<h2>WTF Detective Conan 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44952421">КайШин</a>
+    </li>
+</ul>
 <h2>WTF Dragon Age 2023</h2>
 <ul>
     <li class="out" title="Внеконкурсная работа">
@@ -576,6 +588,9 @@
     </li>
     <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/43626004"><span class="lang">English</span>By Your Grace</a>
+    </li>
+    <li class="multi" title="Мультиязычная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44839972"><span class="lang">English</span>General's Improbable Moms</a>
     </li>
     <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/42673650"><span class="lang">English</span>Mother in Law From Hell</a>
