--- a/wtf2023/00_out.htm
+++ b/wtf2023/00_out.htm
@@ -179,13 +179,13 @@
 </head><body>
     <div id="anchors"></div>
     <div id="list">
-        <h2>WTF Душеспасение 2023</h2>
+<h2>WTF Душеспасение 2023</h2>
 <ul>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44955805">О нюансах репрезентации: образ еврейской культуры в трилогии "Наука побеждать"</a>
     </li>
 </ul>
-        <h2>WTF Новогодняя сборная имени Оливье 2023</h2>
+<h2>WTF Новогодняя сборная имени Оливье 2023</h2>
 <ul>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44667403">Better when I'm dancing</a>
@@ -470,6 +470,9 @@
 <h2>WTF Anime and Manga 2023</h2>
 <ul>
     <li class="multi" title="Мультиязычная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44966857"><span class="lang">English</span>Kitties</a>
+    </li>
+    <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44609083"><span class="lang">Українська</span>Інший шлях</a>
     </li>
     <li class="multi" title="Мультиязычная работа">
@@ -580,12 +583,6 @@
 </ul>
 <h2>WTF Kylux and Co 2023</h2>
 <ul>
-    <li class="out" title="Внеконкурсная работа">
-        <a target="_blank" href="https://archiveofourown.org/works/44893111">[Art] Easter Bunnies | Пасхальные кролики</a>
-    </li>
-    <li class="out" title="Внеконкурсная работа">
-        <a target="_blank" href="https://archiveofourown.org/works/44870335">[Art] Family Picnic | Семейный пикник</a>
-    </li>
     <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/43626004"><span class="lang">English</span>By Your Grace</a>
     </li>
@@ -594,6 +591,12 @@
     </li>
     <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/42673650"><span class="lang">English</span>Mother in Law From Hell</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44893111">[Art] Easter Bunnies | Пасхальные кролики</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44870335">[Art] Family Picnic | Семейный пикник</a>
     </li>
 </ul>
 <h2>WTF Marvel 2023</h2>
@@ -671,6 +674,12 @@
         <a target="_blank" href="https://archiveofourown.org/works/44799685">Bloody Crow of Cainhurst</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44967028">Flora, of the moon, of the dream</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44966998">Iosefka’s Blood Vial</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44800141">Radagon of the Golden Order</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -693,6 +702,9 @@
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44625601">День на Пике Древних Драконов.</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44967250">Драконье сердце</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44625283">Не враги</a>
@@ -812,6 +824,5 @@
         <a target="_blank" href="https://archiveofourown.org/works/44664238"><span class="lang">Українська</span>Я все зроблю</a>
     </li>
 </ul>
-
     </div>
 </body></html>
