--- a/wtf2023/00_out.htm
+++ b/wtf2023/00_out.htm
@@ -260,6 +260,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44828020">[Art] Смирение</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44996842">[Cosplay] Рябиновая господарка</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44826817">[Video] Маленькая роль</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -333,6 +336,30 @@
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44823604">[Видео] Утренняя гимнастика по-кэртиански</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44987626">[Временная татуировка] Роза и якорь</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44982673">[Вышивка] Кэналлийский Ворон</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44996683">[Крафт] Непростое украшение</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44994340">[Крафт] Отблески на ветках</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44983996">[Крафт] Розовые сны</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44984920">[Схема вышивки] Мэллит</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44984446">[Схема вышивки] Отец Герман</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44985229">[Схема вышивки] Розы Алвасете</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44611438">В серых стенах Лаик</a>
@@ -434,6 +461,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44647594">Старая Придда</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44995093">Традиционное блюдо семьи Окделлов. Лапшевник. Эр Август Штанцлер расщедрился</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44650777">Третий и Второй</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -474,6 +504,9 @@
     </li>
     <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44609083"><span class="lang">Українська</span>Інший шлях</a>
+    </li>
+    <li class="multi" title="Мультиязычная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45151003"><span class="lang">Українська</span>Те, у чого немає імені</a>
     </li>
     <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44607619"><span class="lang">Українська</span>Шарф</a>
@@ -518,7 +551,13 @@
         <a target="_blank" href="https://archiveofourown.org/works/44787496">[Art] Is this...a Tevinter blood mage?</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44977972">[Art] Korcari Wilds</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44787637">[Art] The Messenger</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44977891">[Art] Рога и немного маги</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44787451">[Art] Рогатой женщины много не бывает</a>
@@ -590,6 +629,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44839972"><span class="lang">English</span>General's Improbable Moms</a>
     </li>
     <li class="multi" title="Мультиязычная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45020515"><span class="lang">English</span>Million Scarlet Roses</a>
+    </li>
+    <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/42673650"><span class="lang">English</span>Mother in Law From Hell</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -597,6 +639,9 @@
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44870335">[Art] Family Picnic | Семейный пикник</a>
+    </li>
+    <li class="multi" title="Мультиязычная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45106855"><span class="lang">Українська</span>Порушник громадського порядку, або Як чудово провести час</a>
     </li>
 </ul>
 <h2>WTF Marvel 2023</h2>
@@ -627,6 +672,33 @@
 <ul>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44509558">Evangelion Shin Gekijoban: CHAPTER EX. Tsuki no kodomo-tachi /Rebuild of Evangelion: Babel Records</a>
+    </li>
+</ul>
+<h2>WTF Modao Dezhurka 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45027100">Too sweet</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45027274">Кроличий бог</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45027352">Кусь</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45045314">О кролях и капустке</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45042907">От всего сердца</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45027442">Сердечный привет</a>
+    </li>
+</ul>
+<h2>WTF Music 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45024982">Любовь — это...</a>
     </li>
 </ul>
 <h2>WTF Neglected 2023</h2>
@@ -707,6 +779,12 @@
         <a target="_blank" href="https://archiveofourown.org/works/44967250">Драконье сердце</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44967565">Комок цветущего пурпурного мха</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44967424">Могильная фиалка</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44625283">Не враги</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -782,6 +860,12 @@
         <a target="_blank" href="https://archiveofourown.org/works/44774506">Темно</a>
     </li>
 </ul>
+<h2>WTF Tolkien 2023</h2>
+<ul>
+    <li class="multi" title="Мультиязычная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45051097"><span class="lang">English</span>Moria-Moria</a>
+    </li>
+</ul>
 <h2>WTF Trash and Ebanina 2023</h2>
 <ul>
     <li class="out" title="Внеконкурсная работа">
@@ -791,16 +875,46 @@
 <h2>WTF V poiskah Sasuke 2023</h2>
 <ul>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45039451">100% NEVER</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45082738">Fantastic Beasts and Where to Find Them</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45070738">Find yourself</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45081625">Genjutsu</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45071170">Her Tsukuyomi</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45081361">Her patient</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44838652">Not True Detective</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45083020">Sarada's song</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45083533">The first. The best</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44556256">WTF в поисках Саске 2023: визитка</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45081955">Ангелы не смотрят на тебя</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44853121">Вспомни, какого числа ты варил рис прошлым летом</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44853091">Гадатель</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45043184">МикроСаске и МакроСаске</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44853031">Саске Курильщика</a>
@@ -812,6 +926,12 @@
 <h2>WTF Welcome To Desert Bluffs 2023</h2>
 <ul>
     <li class="multi" title="Мультиязычная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45051853"><span class="lang">English</span>Valentines (not) Approved by the City Council</a>
+    </li>
+    <li class="multi" title="Мультиязычная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45052561"><span class="lang">English</span>Valentines Approved by Journalists</a>
+    </li>
+    <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44443861"><span class="lang">English</span>[Eng] Hello form Desert Bluffs Too - Visit Card</a>
     </li>
 </ul>
@@ -822,6 +942,12 @@
     </li>
     <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44664238"><span class="lang">Українська</span>Я все зроблю</a>
+    </li>
+</ul>
+<h2>WTF Yasuhiro Nightow Team 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/44948653">Пули амура</a>
     </li>
 </ul>
     </div>
