--- a/wtf2023/00_out.htm
+++ b/wtf2023/00_out.htm
@@ -184,6 +184,15 @@
     <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44955805">О нюансах репрезентации: образ еврейской культуры в трилогии "Наука побеждать"</a>
     </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45175336">Огненный зверь</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45175780">Под дулом пистолета</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45175492">Тьма и огонь</a>
+    </li>
 </ul>
 <h2>WTF Новогодняя сборная имени Оливье 2023</h2>
 <ul>
@@ -497,6 +506,12 @@
         <a target="_blank" href="https://archiveofourown.org/works/44605897">Спасательная операция</a>
     </li>
 </ul>
+<h2>WTF All Around Kolenki 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45152830">Мелочи</a>
+    </li>
+</ul>
 <h2>WTF Anime and Manga 2023</h2>
 <ul>
     <li class="multi" title="Мультиязычная работа">
@@ -504,6 +519,9 @@
     </li>
     <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44609083"><span class="lang">Українська</span>Інший шлях</a>
+    </li>
+    <li class="multi" title="Мультиязычная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45154237"><span class="lang">Українська</span>Її маленький мисливець</a>
     </li>
     <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/45151003"><span class="lang">Українська</span>Те, у чого немає імені</a>
@@ -650,6 +668,18 @@
         <a target="_blank" href="https://archiveofourown.org/works/44571007"><span class="lang">English</span>Ash and Amber</a>
     </li>
 </ul>
+<h2>WTF Max Frei 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45150004">Есть одна награда смех</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45153124">Проще увидеть</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45148888">Тучи пузырятся, дождь слюны течёт по перьям, а те пенятся в ответ</a>
+    </li>
+</ul>
 <h2>WTF Max Frei Vilnius 2023</h2>
 <ul>
     <li class="out" title="Внеконкурсная работа">
@@ -734,10 +764,22 @@
         <a target="_blank" href="https://archiveofourown.org/works/44665795"><span class="lang">беларуская</span>Шнары</a>
     </li>
 </ul>
+<h2>WTF Polyamory 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45176341">Их дьяволом была похоть</a>
+    </li>
+</ul>
 <h2>WTF Rare Games 2023</h2>
 <ul>
     <li class="multi" title="Мультиязычная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44601145"><span class="lang">English</span>King of Nothing</a>
+    </li>
+</ul>
+<h2>WTF Russian TV Vampires 2023</h2>
+<ul>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45148987">Вы</a>
     </li>
 </ul>
 <h2>WTF Souls Ring 2023</h2>
@@ -779,6 +821,9 @@
         <a target="_blank" href="https://archiveofourown.org/works/44967250">Драконье сердце</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45168118">Кольцо синее, кольцо белое</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44967565">Комок цветущего пурпурного мха</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
@@ -788,7 +833,19 @@
         <a target="_blank" href="https://archiveofourown.org/works/44625283">Не враги</a>
     </li>
     <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45167971">Пепел говорит</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
         <a target="_blank" href="https://archiveofourown.org/works/44625511">Полуночный перерыв</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45167263">Равноценный обмен</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45167476">Тихое место</a>
+    </li>
+    <li class="out" title="Внеконкурсная работа">
+        <a target="_blank" href="https://archiveofourown.org/works/45168283">Тысяча ступеней</a>
     </li>
 </ul>
 <h2>WTF The Witcher In The Shadows 2023</h2>
@@ -950,5 +1007,6 @@
         <a target="_blank" href="https://archiveofourown.org/works/44948653">Пули амура</a>
     </li>
 </ul>
+
     </div>
 </body></html>
